[package]
name = "that-one-bot-rust"
version = "0.1.0"
authors = ["Tyler"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
reqwest = {version = "0.11", features = ["json"]}
dotenv = "0.15"
rand = "*"
roxmltree = "0.14"
tokio = {version = "1", features = ["full"]}
rusqlite = {version = "0.24", features = ["bundled"]}
songbird = "*"
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.2"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "standard_framework",
    "utils",
    "rustls_backend",
    "voice",
    "voice-model",
]
version = "0.10"