[package]
name = "that-one-bot-rust"
version = "0.1.0"
authors = ["Tyler"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "*"
reqwest = {version = "0.11", features = ["json"]}
dotenv = "0.15"
rand = "*"
roxmltree = "0.19.0"
tokio = {version = "1", features = ["full"]}
rusqlite = {version = "0.31.0", features = ["bundled"]}
songbird = {version = "0.4", features = ["default", "builtin-queue"]}
regex = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ureq = "*"
scraper = "*"

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "http",
    "model",
    "voice_model",
    "utils",
    "rustls_backend",
    "voice",
]
version = "0.12"

[dependencies.poise]
version = "0.6"

[dependencies.symphonia]
version = "0.5.4"
features = ["aac", "mp3", "flac"]